<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <item
        android:id="@+id/toolbar_r_img"
        android:title="更多"
        android:icon="@drawable/ic_menu_white_24dp"
        app:showAsAction="ifRoom"
        >
        <menu>
            <group>
            <item
                android:id="@+id/navigation_chart"
                android:icon="@drawable/ic_account_circle_black_24dp"
                app:showAsAction="ifRoom"
                android:title="@string/title_home"/>

            <item
                android:id="@+id/navigation_group"
                android:icon="@drawable/ic_group_black_24dp"
                app:showAsAction="ifRoom"
                android:title="@string/title_dashboard"/>

                <item
                    android:id="@+id/sendFriendsMsg"
                    android:icon="@drawable/ic_pie_chart_outlined_black_24dp"
                    app:showAsAction="ifRoom"
                    android:title="@string/send_friends_msg"/>

            <item
                android:id="@+id/navigation_setting"
                android:icon="@drawable/ic_settings_black_24dp"
                app:showAsAction="ifRoom"
                android:title="@string/title_setting"/>

            <item
                android:id="@+id/navigation_exit"
                android:icon="@drawable/ic_power_settings_new_black_24dp"
                app:showAsAction="ifRoom"
                android:title="@string/title_exit"/>
            </group>
        </menu>
    </item>
</menu>
