<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.smart.chatui.ui.activity.SendGroupsActivity">

    <include layout="@layout/chart_toolbar_layout"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            android:layout_below="@+id/toolbarLayout"
            android:layout_above="@+id/btnLayout"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="待发人总数:"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    />

                <TextView
                    android:id="@+id/tvCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="1110人"
                    android:textColor="@color/colorPrimary"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="发送方式"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                />

            <CheckBox
                android:id="@+id/checkMsg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="短信"
                />

            <CheckBox
                android:id="@+id/checkWx"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="门店微信"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="发送内容"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@drawable/search_input_bg"
                android:gravity="top|left"
                android:padding="5dp"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center|left"
                android:orientation="horizontal"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="添加图片"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/add_pto_desc"
                    android:textSize="12sp"
                    />
            </LinearLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycleViewGallery"
                android:layout_width="match_parent"
                android:layout_height="100dp"/>


        </LinearLayout>

    <LinearLayout
        android:id="@+id/btnLayout"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="5dp"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        >

        <Button
            android:id="@+id/btnSelectModel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@drawable/btn_select_bg"
            android:text="@string/select_mode_label"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            />

        <Button
            android:id="@+id/btnComfirmSendGroup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@drawable/btn_select_bg"
            android:text="@string/comfirm_send_group_msg"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            />

    </LinearLayout>
</RelativeLayout>
